--- a/index.html
+++ b/index.html
@@ -1,1 +1,33 @@
+<!DOCTYPE html>
+<html lang="es">
+<head>
+  <meta charset="UTF-8">
+  <title>Portafolio de Hernán Ferreira</title>
+</head>
+<body>
+  <h1>👨‍💻 Hernán Ferreira</h1>
+  <p><strong>Desarrollador de Software - Paraguay</strong></p>
+  <p>Profesional en desarrollo de software enfocado en brindar soluciones reales y escalables.</p>
+  <p>Diseño sistemas personalizados, sitios web y aplicaciones móviles adaptadas a cada negocio.</p>
+  <p>Trabajo con compromiso, claridad y soporte constante en cada etapa del proyecto.</p>
 
+  <h2>🚀 Proyectos Realizados</h2>
+  <h3>Laravel</h3>
+  <a href="Laravel/Laravel/inventario">Proyecto Inventario</a>
+
+  <h2>🏅 Certificados</h2>
+  <ul>
+    <li><a href="certificados/Desarrolloweb.pdf">Curso Udemy - Desarrollo Frontend</a></li>
+    <li><a href="certificados/Seguridadinformacion.pdf">Curso LinkedIn - Seguridad de la Información</a></li>
+    <li><a href="certificados/IntroduccionAWS.pdf">Curso LinkedIn - AWS</a></li>
+    <li><a href="certificados/Pythonavanzado.pdf">Curso Python - Avanzado</a></li>
+  </ul>
+
+  <h2>🛠️ Tecnologías Conocidas</h2>
+  <p>Java · Flutter · Laravel · PHP · SQL · HTML/CSS · JavaScript · Git · GitHub · Python</p>
+
+  <h2>📫 Contacto</h2>
+  <p>Primario: hernan.ferreira.996@gmail.com · (0974) 223-003</p>
+  <p>Secundario: desatec25@gmail.com / hernan.ferreira.981@gmail.com · (0991) 385-981</p>
+</body>
+</html>
