--- a/index.html
+++ b/index.html
@@ -1,33 +1,102 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <title>Portafolio de Hernán Ferreira</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Hernán Ferreira - Portfolio</title>
+  <style>
+    body {
+      font-family: 'Segoe UI', sans-serif;
+      margin: 40px;
+      background-color: #f9f9f9;
+      color: #333;
+    }
+    h1, h2, h3 {
+      color: #e63946;
+    }
+    a {
+      color: #1d3557;
+      text-decoration: none;
+    }
+    a:hover {
+      text-decoration: underline;
+    }
+    code {
+      background: #eee;
+      padding: 3px 7px;
+      border-radius: 5px;
+      margin: 3px;
+      display: inline-block;
+    }
+    .section {
+      margin-bottom: 40px;
+    }
+    .cert-list li {
+      margin-bottom: 6px;
+    }
+  </style>
 </head>
 <body>
+
   <h1>👨‍💻 Hernán Ferreira</h1>
   <p><strong>Desarrollador de Software - Paraguay</strong></p>
-  <p>Profesional en desarrollo de software enfocado en brindar soluciones reales y escalables.</p>
-  <p>Diseño sistemas personalizados, sitios web y aplicaciones móviles adaptadas a cada negocio.</p>
-  <p>Trabajo con compromiso, claridad y soporte constante en cada etapa del proyecto.</p>
+  <p>
+    Combino el análisis funcional y técnico de sistemas con el desarrollo completo de soluciones web y móviles, integrando documentación, arquitectura y diseño UX/UI eficaz.
+  </p>
 
-  <h2>🚀 Proyectos Realizados</h2>
-  <h3>Laravel</h3>
-  <a href="Laravel/Laravel/inventario">Proyecto Inventario</a>
+  <hr>
 
-  <h2>🏅 Certificados</h2>
-  <ul>
-    <li><a href="certificados/Desarrolloweb.pdf">Curso Udemy - Desarrollo Frontend</a></li>
-    <li><a href="certificados/Seguridadinformacion.pdf">Curso LinkedIn - Seguridad de la Información</a></li>
-    <li><a href="certificados/IntroduccionAWS.pdf">Curso LinkedIn - AWS</a></li>
-    <li><a href="certificados/Pythonavanzado.pdf">Curso Python - Avanzado</a></li>
-  </ul>
+  <div class="section">
+    <h2>🚀 Proyectos Realizados</h2>
+    <h3>Páginas sencillas funcionales</h3>
+    <ul>
+      <li>🌦️ <strong>Proyecto: Clima</strong> – 
+        <a href="https://github.com/Hernan-Ferreira996/paginaswebfuncionales/tree/main/clima">Ver archivos del proyecto</a>
+      </li>
+    </ul>
+  </div>
 
-  <h2>🛠️ Tecnologías Conocidas</h2>
-  <p>Java · Flutter · Laravel · PHP · SQL · HTML/CSS · JavaScript · Git · GitHub · Python</p>
+  <div class="section">
+    <h2>🏅 Certificados</h2>
+    <ul class="cert-list">
+      <li>Curso Udemy <a href="certificados/Desarrolloweb.pdf">Desarrollo Frontend</a></li>
+      <li>Curso Linkedin <a href="certificados/Seguridadinformacion.pdf">Seguridad de la Información</a></li>
+      <li>Curso Linkedin <a href="certificados/IntroduccionAWS.pdf">AWS</a></li>
+      <li>Curso Udemy <a href="certificados/Pythonavanzado.pdf">Python</a></li>
+    </ul>
+  </div>
 
-  <h2>📫 Contacto</h2>
-  <p>Primario: hernan.ferreira.996@gmail.com · (0974) 223-003</p>
-  <p>Secundario: desatec25@gmail.com / hernan.ferreira.981@gmail.com · (0991) 385-981</p>
+  <div class="section">
+    <h2>🛠️ Tecnologías Conocidas</h2>
+    <code>Java</code>
+    <code>Flutter</code>
+    <code>Laravel</code>
+    <code>PHP</code>
+    <code>SQL</code>
+    <code>HTML/CSS</code>
+    <code>JavaScript</code>
+    <code>Git</code>
+    <code>GitHub</code>
+    <code>Python</code>
+  </div>
+
+  <div class="section">
+    <h2>📫 Contacto primario</h2>
+    <ul>
+      <li>📧 hernan.ferreira.996@gmail.com</li>
+      <li>📱 (0974) 223-003</li>
+      <li>🌐 <a href="https://hernan-ferreira996.github.io">hernan-ferreira996.github.io</a></li>
+    </ul>
+  </div>
+
+  <div class="section">
+    <h2>📫 Contacto secundario</h2>
+    <ul>
+      <li>📱 (0991) 385-981</li>
+      <li>🌐 <a href="https://hernan-ferreira996.github.io">hernan-ferreira996.github.io</a></li>
+      <li>📧 desatec25@gmail.com / hernan.ferreira.981@gmail.com</li>
+    </ul>
+  </div>
+
 </body>
 </html>
