--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <h3>Páginas sencillas funcionales</h3>
     <ul>
       <li>🌦️ <strong>Proyecto: Clima</strong> – 
-        <a href="https://github.com/Hernan-Ferreira996/paginaswebfuncionales/tree/main/clima">Ver archivos del proyecto</a>
+        <a href="https://github.com/Hernan-Ferreira996/paginaswebfuncionales/tree/main/clima/index.html">Ver archivos del proyecto</a>
       </li>
     </ul>
   </div>
