--- a/index.html
+++ b/index.html
@@ -50,8 +50,11 @@
     <h2>🚀 Proyectos Realizados</h2>
     <h3>Páginas sencillas funcionales</h3>
     <ul>
-      <li>🌦️ <strong>Proyecto: Clima</strong> – 
-        <a href="https://github.com/Hernan-Ferreira996/paginaswebfuncionales/tree/main/clima/index.html">Ver archivos del proyecto</a>
+      <li>
+        🌦️ <strong>Proyecto: Clima</strong> –
+        <a href="https://hernan-ferreira996.github.io/paginaswebfuncionales/clima/" target="_blank">
+          Ver sitio funcionando
+        </a>
       </li>
     </ul>
   </div>
