--- a/index.html
+++ b/index.html
@@ -46,18 +46,37 @@
 
   <hr>
 
-  <div class="section">
-    <h2>🚀 Proyectos Realizados</h2>
-    <h3>Páginas sencillas funcionales</h3>
-    <ul>
-      <li>
-        🌦️ <strong>Proyecto: Clima</strong> –
-        <a href="https://hernan-ferreira996.github.io/paginaswebfuncionales/clima/" target="_blank">
-          Ver sitio funcionando
-        </a>
-      </li>
-    </ul>
-  </div>
+<div class="section">
+  <h2>🚀 Proyectos Realizados</h2>
+  <h3>Páginas sencillas funcionales</h3>
+  <ul>
+    <li>
+      🌦️ <strong>Proyecto: Clima</strong> –
+      <a href="https://hernan-ferreira996.github.io/paginaswebfuncionales/clima/" target="_blank">
+        Ver sitio funcionando
+      </a>
+    </li>
+    <li>
+      📄 <strong>CV Interactivo</strong> –
+      <a href="https://hernan-ferreira996.github.io/paginaswebfuncionales/cvinteractivo/" target="_blank">
+        Ver sitio funcionando
+      </a>
+    </li>
+    <li>
+      ✅ <strong>Tablero Productivo</strong> –
+      <a href="https://hernan-ferreira996.github.io/paginaswebfuncionales/tablero%20productivo/" target="_blank">
+        Ver sitio funcionando
+      </a>
+    </li>
+    <li>
+      📬 <strong>Validación de Formulario</strong> –
+      <a href="https://hernan-ferreira996.github.io/paginaswebfuncionales/validarcontacto/" target="_blank">
+        Ver sitio funcionando
+      </a>
+    </li>
+  </ul>
+</div>
+
 
   <div class="section">
     <h2>🏅 Certificados</h2>
