--- a/index.html
+++ b/index.html
@@ -52,25 +52,25 @@
   <ul>
     <li>
       🌦️ <strong>Proyecto: Clima</strong> –
-      <a href="https://hernan-ferreira996.github.io/paginaswebfuncionales/clima/" target="_blank">
+      <a href="https://github.com/Hernan-Ferreira996/paginaswebfuncionales/tree/main/clima" target="_blank">
         Ver sitio funcionando
       </a>
     </li>
     <li>
       📄 <strong>CV Interactivo</strong> –
-      <a href="https://hernan-ferreira996.github.io/paginaswebfuncionales/cvinteractivo/" target="_blank">
+      <a href="https://github.com/Hernan-Ferreira996/paginaswebfuncionales/tree/main/cvinteractivo" target="_blank">
         Ver sitio funcionando
       </a>
     </li>
     <li>
       ✅ <strong>Tablero Productivo</strong> –
-      <a href="https://hernan-ferreira996.github.io/paginaswebfuncionales/tablero%20productivo/" target="_blank">
+      <a href="https://github.com/Hernan-Ferreira996/paginaswebfuncionales/tree/main/tablero%20productivo/" target="_blank">
         Ver sitio funcionando
       </a>
     </li>
     <li>
       📬 <strong>Validación de Formulario</strong> –
-      <a href="https://hernan-ferreira996.github.io/paginaswebfuncionales/validarcontacto/" target="_blank">
+      <a href="https://github.com/Hernan-Ferreira996/paginaswebfuncionales/tree/main/validarcontacto/" target="_blank">
         Ver sitio funcionando
       </a>
     </li>
