--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     </li>
     <li>
       📄 <strong>CV Interactivo</strong> –
-      <a href="https://github.com/Hernan-Ferreira996/paginaswebfuncionales/blob/main/cvinteractivo/index.html" target="_blank">
+      <a href="https://github.com/Hernan-Ferreira996/paginaswebfuncionales/blob/main/cvinteractivo/" target="_blank">
         Ver sitio funcionando
       </a>
     </li>
