--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
 
 <div class="section">
   <h2>🚀 Proyectos Realizados</h2>
+
   <h3>Páginas sencillas funcionales</h3>
   <ul>
     <li>
@@ -63,21 +64,23 @@
       </a>
     </li>
     <li>
-      ✅ <strong>Tablero Productivo</strong> –
-      <a href="https://hernan-ferreira996.github.io/paginaswebfuncionales/tablero%20productivo/" target="_blank">
-        Ver sitio funcionando
-      </a>
-    </li>
-    <li>
       📬 <strong>Validación de Formulario</strong> –
       <a href="https://hernan-ferreira996.github.io/paginaswebfuncionales/validarcontacto/" target="_blank">
         Ver sitio funcionando
       </a>
     </li>
   </ul>
+
+  <h3>⚛️ Proyectos en React JS</h3>
+  <ul>
+    <li>
+      🧭 <strong>Convertidor de Monedas</strong> –
+      <a href="https://tusitio-react.netlify.app/" target="_blank">
+        Ver sitio funcionando
+      </a>
+    </li>
+  </ul>
 </div>
-
-
   <div class="section">
     <h2>🏅 Certificados</h2>
     <ul class="cert-list">
