--- a/index.html
+++ b/index.html
@@ -87,13 +87,34 @@
       <h2>Technical Variety</h2>
       <p>I have worked with different stacks covering <strong>frontend</strong>, <strong>backend</strong>, <strong>databases</strong>, and <strong>cloud deployment</strong>, which allows me to adapt to diverse contexts.</p>
 
-      <h2>Certifications</h2>
-      <ul>
-        <li>Udemy — <a href="certificados/Desarrolloweb.pdf">Frontend Development</a></li>
-        <li>LinkedIn — <a href="certificados/Seguridadinformacion.pdf">Information Security</a></li>
-        <li>LinkedIn — <a href="certificados/IntroduccionAWS.pdf">Introduction to AWS</a></li>
-        <li>Udemy — <a href="certificados/Pythonavanzado.pdf">Advanced Python</a></li>
-      </ul>
+<h2>Certifications</h2>
+<ul>
+  <li>Udemy — 
+    <a href="certificados/Desarrolloweb.pdf"
+       download="Certificate-Frontend-Development-Hernan-Ferreira.pdf">
+       Frontend Development (PDF)
+    </a>
+  </li>
+  <li>LinkedIn — 
+    <a href="certificados/Seguridadinformacion.pdf"
+       download="Certificate-Information-Security-Hernan-Ferreira.pdf">
+       Information Security (PDF)
+    </a>
+  </li>
+  <li>LinkedIn — 
+    <a href="certificados/IntroduccionAWS.pdf"
+       download="Certificate-Introduction-to-AWS-Hernan-Ferreira.pdf">
+       Introduction to AWS (PDF)
+    </a>
+  </li>
+  <li>Udemy — 
+    <a href="certificados/Pythonavanzado.pdf"
+       download="Certificate-Advanced-Python-Hernan-Ferreira.pdf">
+       Advanced Python (PDF)
+    </a>
+  </li>
+</ul>
+
 
       <h2>Tech Skills</h2>
       <div class="chips">
