--- a/index.html
+++ b/index.html
@@ -65,23 +65,13 @@
       <h2>Real Projects</h2>
 
       <div class="project">
-        <strong>🌦️ Weather App</strong>
-        <p class="project-desc"><strong>Challenge:</strong> Build a simple app to check real‑time weather.<br>
-        <strong>Solution:</strong> Developed a web app that consumes weather APIs and displays clear information to the user.<br>
+        <strong>Classic Meals</strong>
+        <p class="project-desc"><strong>Challenge:</strong>Develop a frontend for a restaurant with typical and traditional Paraguayan dishes with daily updates..<br>
+        <strong>Solution:</strong> Develop a web application that consumes an API of all the classic Paraguayan foods with summarized and clear recipes..<br>
         <strong>Stack:</strong> HTML, CSS, JavaScript.<br>
         <strong>Learned:</strong> Working with APIs and presenting dynamic data.<br>
-        <strong>Next step:</strong> Add automatic geolocation.</p>
-        <a href="https://hernan-ferreira996.github.io/paginaswebfuncionales/clima/" target="_blank">Live demo</a>
-      </div>
-
-      <div class="project">
-        <strong>📄 Interactive CV</strong>
-        <p class="project-desc"><strong>Challenge:</strong> Turn a traditional CV into a dynamic format.<br>
-        <strong>Solution:</strong> Built a responsive, interactive site to present personal and professional information.<br>
-        <strong>Stack:</strong> HTML, CSS, JavaScript.<br>
-        <strong>Learned:</strong> Improving presentation and accessibility.<br>
-        <strong>Next step:</strong> Add multilingual support.</p>
-        <a href="https://hernan-ferreira996.github.io/paginaswebfuncionales/cvinteractivo/" target="_blank">Live demo</a>
+        <strong>Next step:</strong> Add food ordering option through Pedidos Ya.</p>
+        <a href="https://hernan-ferreira996.github.io/miniproyectosfrontend/index.html" target="_blank">Live demo</a>
       </div>
 
       <h2>Technical Variety</h2>
