--- a/index.html
+++ b/index.html
@@ -71,6 +71,16 @@
         <strong>Stack:</strong> HTML, CSS, JavaScript.<br>
         <strong>Learned:</strong> Working with APIs and presenting dynamic data.<br>
         <strong>Next step:</strong> Add food ordering option through Pedidos Ya.</p>
+        <a href="https://hernan-ferreira996.github.io/miniproyectosfrontend/comidapy.html" target="_blank">Live demo</a>
+      </div>
+
+      <div class="project">
+        <strong>Classic Meals</strong>
+        <p class="project-desc"><strong>Challenge:</strong>Develop a frontend for a restaurant with typical and traditional Paraguayan dishes with daily updates..<br>
+        <strong>Solution:</strong> Develop a web application that consumes an API of all the classic Paraguayan foods with summarized and clear recipes..<br>
+        <strong>Stack:</strong> HTML, CSS, JavaScript.<br>
+        <strong>Learned:</strong> Working with APIs and presenting dynamic data.<br>
+        <strong>Next step:</strong> Add food ordering option through Pedidos Ya.</p>
         <a href="https://hernan-ferreira996.github.io/miniproyectosfrontend/index.html" target="_blank">Live demo</a>
       </div>
 
