--- a/miniproyectosfrontend/clima/index.html
+++ b/miniproyectosfrontend/clima/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div class="app">
-    <h1 class="title">🌤️ Weather Forecast</h1>
+    <h1 class="title">Weather Forecast</h1>
     <div class="search-box">
       <input type="text" id="city" placeholder="Enter city name..." />
       <button onclick="getHourlyForecast()">Search</button>
@@ -19,3 +19,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
