--- a/index.html
+++ b/index.html
@@ -74,6 +74,16 @@
         <a href="https://hernan-ferreira996.github.io/miniproyectosfrontend/comidapy.html" target="_blank">Live demo</a> 
       </div>
 
+      <div class="project">
+        <strong>Classic Meals</strong>
+        <p class="project-desc"><strong>Challenge:</strong>Develop an interface that allows you to know the weather by entering the city and country.<br>
+        <strong>Solution:</strong> Develop an application that consumes an API to obtain all the future weather for the entire world.<br>
+        <strong>Stack:</strong> HTML, CSS, JavaScript.<br>
+        <strong>Learned:</strong> Working with APIs and presenting dynamic data.<br>
+        <strong>Next step:</strong> Add a location button to automatically show the weather for a future week.</p>
+        <a href="https://hernan-ferreira996.github.io/miniproyectosfrontend/clima/index.html" target="_blank">Live demo</a> 
+      </div>
+
       <h2>Technical Variety</h2>
       <p>I have worked with different stacks covering <strong>frontend</strong>, <strong>backend</strong>, <strong>databases</strong>, and <strong>cloud deployment</strong>, which allows me to adapt to diverse contexts.</p>
 
