--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
       </div>
 
       <div class="project">
-        <strong>Classic Meals</strong>
+        <strong>World Climate</strong>
         <p class="project-desc"><strong>Challenge:</strong>Develop an interface that allows you to know the weather by entering the city and country.<br>
         <strong>Solution:</strong> Develop an application that consumes an API to obtain all the future weather for the entire world.<br>
         <strong>Stack:</strong> HTML, CSS, JavaScript.<br>
