--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <div class="card">
       <h1>Hernán Ferreira</h1>
       <p class="summary">Software Developer · Paraguay</p>
-      <p>I combine functional analysis and full‑stack development to deliver end‑to‑end web and mobile solutions, with attention to documentation, architecture, and clear, efficient UX/UI design.</p>
+      <p>I Experienced Junior Frontend Developer: from requirements to screen, prioritizing documentation, architectural simplicity, and efficient UX/UI.</p>
 
       <h2>Real Projects</h2>
 
