Add Auto Repair Workshop project details
Added a new project section for an Auto Repair Workshop full-stack application, detailing the challenge, solution, tech stack, learned skills, and next steps.

--- a/index.html
+++ b/index.html
@@ -84,6 +84,21 @@
         <a href="https://hernan-ferreira996.github.io/miniproyectosfrontend/clima/index.html" target="_blank">Live demo</a> 
       </div>
 
+      <div class="project">
+        <strong>Auto Repair Workshop (Full-stack)</strong>
+        <p class="project-desc">
+        <strong>Challenge:</strong> Build an end-to-end system to manage clients, vehicles, spare parts, work orders (OTs) and users with authentication and role-based permissions.<br>
+        <strong>Solution:</strong> A full-stack web app with a React + Vite + TypeScript frontend and a FastAPI REST backend using MySQL. 
+        It includes JWT login, permission gates on the UI, and complete CRUD for all modules (Clients, Vehicles, Spare Parts, OTs, Users).<br>
+        <strong>Stack:</strong> React, TypeScript, Vite, React Router, Axios, Zustand, Bootstrap · FastAPI, Uvicorn, SQLAlchemy, Pydantic, Passlib · MySQL.<br>
+        <strong>Learned:</strong> Designing relational models and REST APIs, implementing JWT auth and role-based authorization, handling CORS, 
+        error handling and validation with Pydantic, and deploying on Render/Vercel/Railway.<br>
+        <strong>Next step:</strong> OT workflow states with attachments, PDF/CSV reports, activity/audit logs, and multi-branch support.
+        </p>
+        <a href="https://github.com/Hernan-Ferreira996/taller" target="_blank" style="margin-left:12px;">Source code</a>
+      </div>
+
+
       <h2>Technical Variety</h2>
       <p>I have worked with different stacks covering <strong>frontend</strong>, <strong>backend</strong>, <strong>databases</strong>, and <strong>cloud deployment</strong>, which allows me to adapt to diverse contexts.</p>
 
