Actualización de link de repositorio

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         error handling and validation with Pydantic, and deploying on Render/Vercel/Railway.<br>
         <strong>Next step:</strong> OT workflow states with attachments, PDF/CSV reports, activity/audit logs, and multi-branch support.
         </p>
-        <a href="https://github.com/Hernan-Ferreira996/taller" target="_blank" style="margin-left:12px;">Source code</a>
+        <<a href="https://github.com/hernan-ferreira996/taller" target="_blank" rel="noopener noreferrer">Código fuente</a>
       </div>
 
 
