--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 
       <h2>Tech Skills</h2>
       <div class="chips">
-        <span class="chip">Java</span>
+        <span class="chip">React Js</span>
         <span class="chip">SQL</span>
         <span class="chip">HTML/CSS</span>
         <span class="chip">Node JS</span>
