Actualización de link de un curso finalizado
Cambios en los cursos realizados

--- a/index.html
+++ b/index.html
@@ -110,10 +110,10 @@
        Frontend Development (PDF)
     </a>
   </li>
-  <li>LinkedIn — 
-    <a href="certificados/Seguridadinformacion.pdf"
-       download="Certificate-Information-Security-Hernan-Ferreira.pdf">
-       Information Security (PDF)
+  <li>Mouredev — 
+    <a href="certificados/Hernán Ferreira - 2025-10-31.pdf"
+       download="Certificate-Information-BackendFastAPI-Hernan-Ferreira.pdf">
+       Backend FastAPI (PDF)
     </a>
   </li>
   <li>LinkedIn — 
